# fairmat-indico-theme

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg
indico_themes_fairmat/: plugin.py
indico_themes_fairmat/static/css/: fairmat.css  global.css
indico_themes_fairmat/templates/: html-head.html
indico_themes_fairmat/templates/core/: footer.html  header.html
indico_themes_fairmat/templates/core/emails/: base.txt
src/indico_themes_fairmat/: plugin.py
src/indico_themes_fairmat/static/css/: global.css
src/indico_themes_fairmat/templates/core/emails/: base.html  base.txt
