[metadata]
name = indico-plugin-themes-fairmat
version = 1.0.0
url = https://gitlab.mpcdf.mpg.de/nomad-lab/indico-plugins-themes-fairmat
license = Apache 2.0
author = Fekete Adam
author_email = adam@fekete.co.uk
classifiers =
    Environment :: Plugins
    Environment :: Web Environment
    License :: OSI Approved :: Apache 2.0
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >=3.9.0
install_requires =
    indico>=3.0

[options.entry_points]
indico.plugins =
    themes_fairmat = indico_themes_fairmat.plugin:FairmatThemesPlugin

